# Retail-Catalog-Enrichment

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE-3rd-party.txt  PRD.md  README.md  docker-compose.yml  nginx.conf  pyproject.toml  sonar-project.properties
.cursor/rules/: refactor.mdc
.github/workflows/: ci.yml  coverage.yml  qa.yml  sonarqube.yml
deploy/: 1_Deploy_Catalog_Enrichment.ipynb
docs/: API.md  DOCKER.md  POLICY_COMPLIANCE.md  PRD.md  PRODUCT_MANUAL_FAQS.md  WEB_INSIGHTS.md  hallucination-report.md
shared/config/: config.yaml
src/backend/: Dockerfile  config.py  graph.py  image.py  main.py  policy.py  product_manual.py  reflection.py  trellis.py  utils.py  vlm.py  web_insights.py
src/ui/: .dockerignore  Dockerfile  README.md  next.config.ts  package.json  pnpm-lock.yaml  tsconfig.json
src/ui/app/: globals.css  layout.tsx  page.tsx
src/ui/components/: AdvancedOptionsCard.tsx  FieldsCard.tsx  GeneratedVariationsSection.tsx  Header.tsx  HealthIndicators.tsx  ImageUploadCard.tsx  ModelViewer3D.tsx  ProcessingSteps.tsx  ProtocolsTabContent.tsx
src/ui/kui-foundations-react-external/: package.json
src/ui/kui-foundations-react-external/foundations-design-tokens/: package.json
src/ui/kui-foundations-react-external/nebula/: package.json
src/ui/lib/: api.ts  utils.ts
src/ui/types/: index.ts  model-viewer.d.ts
tests/: conftest.py  test_basic_endpoints.py  test_config.py  test_image_generation_unit.py  test_image_utils.py  test_llm_thinking_config.py  test_policy_library_unit.py  test_policy_unit.py  test_product_manual_unit.py  test_protocol_schemas.py  test_reflection_unit.py  test_rich_product_json_endpoint.py  test_trellis_unit.py  test_utils.py  test_validation.py  test_vlm_describe.py  test_vlm_unit.py  test_web_insights_unit.py
tests/fixtures/: invalid_config.yaml  sample_config.yaml
