[build-system]
requires = ["hatchling>=1.21.1"]
build-backend = "hatchling.build"

[project]
name = "catalog-enrichment"
version = "0.1.0"
description = "A system for enriching product catalog data with additional metadata, descriptions, and categorization."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "langgraph==0.6.7",
  "uvicorn[standard]>=0.30,<1.0",
  "starlette>=0.37,<1.0",
  "fastapi>=0.115.0,<1.0",
  "python-multipart>=0.0.9,<1.0",
  "openai>=1.47.0,<2.0",
  "python-dotenv>=1.0.1,<2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/backend"]

[tool.uv]
dev-dependencies = [
  "pytest>=8.3,<9.0",
  "httpx>=0.27,<1.0",
]


